# freally-player

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  EULA.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/convert/: Cargo.toml
crates/convert/src/: lib.rs
crates/player/: Cargo.toml  build.rs
crates/player/src/: lib.rs  mpv.rs
crates/player/src/surface/: mod.rs  windows.rs
crates/streaming/: Cargo.toml
crates/streaming/src/: lib.rs
crates/subtitles/: Cargo.toml
crates/subtitles/src/: lib.rs  load.rs  opensubtitles.rs  prefs.rs
docs/: changelog.html  documentation.html  index.html  styles.css
scripts/: bundle-macos-dylibs.sh  ci-local.mjs  vendor-libmpv.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: frec.icns  icon.icns
src-tauri/src/: bugreport.rs  eula.rs  events.rs  lib.rs  main.rs  mediakeys.rs  paths.rs  settings.rs
src-tauri/src/commands/: mod.rs  playback.rs  subtitles.rs
ui/: .prettierignore  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
ui/e2e/: fonts.spec.ts  gallery.spec.ts  languages.spec.ts  tauri-mock.js
ui/scripts/: i18n-lint.mjs
ui/src/: App.test.tsx  App.tsx  main.tsx
ui/src/components/: AudioMenu.tsx  ControlBar.tsx  Menu.tsx  Scrubber.tsx  SubtitleMenu.tsx  TitleBar.tsx
ui/src/hooks/: useShortcuts.ts
ui/src/i18n/: ar.ftl  de.ftl  en.ftl  es.ftl  fr.ftl  hi.ftl  id.ftl  index.ts  it.ftl  ja.ftl  ko.ftl  locales.test.ts  locales.ts  nl.ftl  pl.ftl  pt-BR.ftl  ru.ftl  tr.ftl  uk.ftl  vi.ftl  zh-CN.ftl
ui/src/ipc/: commands.ts  events.ts  types.ts
ui/src/lib/: time.ts  tracks.ts  transport.ts
ui/src/panels/: BugReport.tsx  EulaGate.tsx  Settings.tsx
ui/src/screens/: Player.tsx
ui/src/styles/: fonts.css  global.css
ui/src/test/: setup.ts
