# Freally Player — Tauri v2 app crate (the Rust core + the React/TS/Vite UI lives in ./ui).
# Planning-stage skeleton; the binary is a GUI app with NO console window on Windows release.
[package]
name = "freally-player"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Plays anything. Beautifully. No ads, no spyware."

[lib]
name = "freally_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "freally-player"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
sha2.workspace = true
fluent.workspace = true
log.workspace = true
souvlaki.workspace = true

# Owned library crates (the player core, library, subtitles, streaming, conversion).
freally-player-core = { path = "../crates/player" }
freally-library     = { path = "../crates/library" }
freally-subtitles   = { path = "../crates/subtitles" }
freally-streaming   = { path = "../crates/streaming" }
freally-convert     = { path = "../crates/convert" }

[features]
# `custom-protocol` is used by Tauri release builds.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
