# Freally Player — Tauri v2 app crate (the Rust core + the React/TS/Vite UI lives in ./ui).
# Planning-stage skeleton; the binary is a GUI app with NO console window on Windows release.
[package]
name = "freally-player"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Plays anything. Beautifully. No ads, no spyware."

[lib]
name = "freally_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "freally-player"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-process.workspace = true
tauri-plugin-dialog.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
sha2.workspace = true
fluent.workspace = true
log.workspace = true
souvlaki.workspace = true
# Opt-in anonymous bug reporting (see HAVOC-STANDARD-bug-report-and-updater.md).
chrono.workspace = true
sysinfo.workspace = true
rfd.workspace = true

# Owned library crates (the player core, library, subtitles, streaming, conversion).
freally-player-core = { path = "../crates/player" }
freally-library     = { path = "../crates/library" }
freally-subtitles   = { path = "../crates/subtitles" }
freally-streaming   = { path = "../crates/streaming" }
freally-convert     = { path = "../crates/convert" }

[features]
# `custom-protocol` is used by Tauri release builds.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Pass-through to the non-owned decode/render engines in freally-player-core. Off by default
# because they link against system libraries; P0.3 turns `engine-libmpv` on.
engine-libmpv = ["freally-player-core/engine-libmpv"]
engine-ffmpeg = ["freally-player-core/engine-ffmpeg"]
