# Freally Player — Tauri v2 app crate (the Rust core + the React/TS/Vite UI lives in ./ui).
# Planning-stage skeleton; the binary is a GUI app with NO console window on Windows release.
[package]
name = "freally-player"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Plays anything. Beautifully. No ads, no spyware."

[lib]
name = "freally_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "freally-player"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-process.workspace = true
tauri-plugin-dialog.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
sha2.workspace = true
fluent.workspace = true
log.workspace = true
souvlaki.workspace = true
# Opt-in anonymous bug reporting (see HAVOC-STANDARD-bug-report-and-updater.md).
chrono.workspace = true
sysinfo.workspace = true
rfd.workspace = true

# Owned library crates (the player core, library, subtitles, streaming, conversion).
freally-player-core = { path = "../crates/player" }
freally-library     = { path = "../crates/library" }
freally-subtitles   = { path = "../crates/subtitles" }
freally-streaming   = { path = "../crates/streaming" }
freally-convert     = { path = "../crates/convert" }

[features]
# `custom-protocol` is used by Tauri release builds.
#
# `engine-libmpv` is ON by default so a plain `cargo build` of the app produces what actually
# ships. It was optional through P0.x, when the shipped installers had no engine and honestly
# said so; that is no longer a state worth being able to build. The bundle now carries libmpv
# as a resource, and `bundle.resources` is resolved by tauri-build during `cargo build` — a
# build without the library could not produce an installer anyway.
#
# The *library* crates keep their engines optional, so `cargo build -p freally-player-core`
# still works on a machine with no media libraries. Building the app needs libmpv: run
# `node scripts/vendor-libmpv.mjs` (Windows) or install libmpv-dev / `brew install mpv`.
default = ["custom-protocol", "engine-libmpv"]
custom-protocol = ["tauri/custom-protocol"]
# Pass-through to the non-owned decode/render engines in freally-player-core.
engine-libmpv = ["freally-player-core/engine-libmpv"]
engine-ffmpeg = ["freally-player-core/engine-ffmpeg"]
