# freally-player-core — owned playback orchestration over the libmpv/ffmpeg engine.
# The decode/render engine is NON-owned and sits behind the `Engine` trait; the only `unsafe`
# in the whole app is the audited FFI module here (so this crate is NOT #![forbid(unsafe_code)]).
[package]
name = "freally-player-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
# Non-owned decode/render engines (behind the Engine trait; LGPL builds, no GPL/nonfree).
# libmpv2/ffmpeg-next link against SYSTEM libraries, so they are optional and OFF by default:
# the workspace must build on a machine with no media libs installed. P0.3 vendors libmpv into
# third_party/ and turns `engine-libmpv` on.
libmpv2 = { workspace = true, optional = true }      # primary decode + render (render API)
ffmpeg-next = { workspace = true, optional = true }  # coverage + conversion engine
symphonia = { workspace = true, optional = true }    # pure-Rust audio decode where useful

[target.'cfg(windows)'.dependencies]
# Only pulled in with the libmpv engine — see the surface module.
windows-sys = { workspace = true, optional = true }

[features]
default = []
engine-libmpv = ["dep:libmpv2", "dep:windows-sys"]
engine-ffmpeg = ["dep:ffmpeg-next", "dep:symphonia"]
